<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModeAndMeteoActivity">

    <TextView
        android:id="@+id/text_v_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/textv_mode"
        />

    <GridView
        android:id="@+id/grid_view_mode"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_below="@id/text_v_mode"
        android:verticalSpacing="14dp"
        android:horizontalSpacing="4dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/option_button"
        android:numColumns="3"
        >

    </GridView>

    <TextView
        android:id="@+id/text_v_meteo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid_view_mode"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/textv_meteo"
        />

    <GridView
        android:id="@+id/grid_view_meteo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/text_v_meteo"
        android:verticalSpacing="14dp"
        android:horizontalSpacing="4dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/option_button"
        android:numColumns="2"
        android:choiceMode="singleChoice">
    </GridView>

    <Button
        android:id="@+id/button_home_comfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid_view_meteo"
        android:layout_centerInParent="true"
        android:text="@string/button_next_home"/>


</RelativeLayout>